--- a/kp_portafolio/src/app/components/layout/header/header.component.html
+++ b/kp_portafolio/src/app/components/layout/header/header.component.html
@@ -7,9 +7,9 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link" routerLinkActive="active" href="#sec" >Principal</a>
-          <a class="nav-link" href="#sec2">Sobre Mi</a>
+          <a class="nav-link" href="#sec2">Sobre Mí</a>
           <a class="nav-link" href="#sec3">Mis Proyectos</a>
-          <a class="nav-link" href="#">Contactame</a>
+          <a class="nav-link" href="#sec4">Contáctame</a>
         </div>
       </div>
     </div>
